# bun-plugin

./: .prototools  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  proto.rs
tests/: download_test.rs  globals_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tests/snapshots/: shims_test__creates_global_shims-2.snap  shims_test__creates_global_shims.snap  shims_test__creates_shims.snap
