[package]
name = "bun_plugin"
version = "0.12.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = { version = "1.1.0" }
proto_pdk = { version = "0.18.0" } #, path = "../../proto/crates/pdk" }
serde = "1.0.200"

[dev-dependencies]
proto_pdk_test_utils = { version = "0.22.0" }       #, path = "../../proto/crates/pdk-test-utils" }
starbase_sandbox = "0.6.0"
tokio = { version = "1.37.0", features = ["full"] }

[features]
default = ["wasm"]
wasm = []

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
